[tool.poetry]
name = "gens"
version = "0.1.0"
description = ""
authors = ["pegov"]

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
fastapi = ">=0.74.0, < 0.75.0"
uvicorn = {version = ">=0.18.2", extras = ["standard"]}
gunicorn = ">=20.1.0"
aioredis = ">=2.0.1"
orjson = "^3.6.3"
httpx = "^0.19.0"
aiogram = "^2.14.3"
uvloop = "0.18.0"
asyncpg = "^0.26.0"
sqlsl = "^0.1.0"
fastapi-auth = { url = "https://github.com/pegov/fastapi-auth/releases/download/0.10.0/fastapi-auth-0.10.0.tar.gz", extras = ["aiosmtplib"]}
# fastapi-auth = {git = "https://github.com/pegov/fastapi-auth.git", branch = "develop", rev = "bd6bc21f76bf705c06a522e15f34853b546b7b64", extras = ["aiosmtplib"]}

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
isort = "^5.9.3"
autoflake = "^1.4"
black = "^22.1.0"
mypy = "^0.971"
pytest = "^7.1.2"
asgi-lifespan = "^1.0.1"
pytest-cov = "^2.12.1"
mkdocs = "^1.2.3"
docker = "^6.0.0"
anyio = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
